@@ -11,6 +11,7 @@ entire history of the project is available through CVS.
 --- 2007-06-XX  Release 7.10.3                                     ---
 ----------------------------------------------------------------------
 
+* mirror BoT primitives - Sean Morrison
 * BoT vertex selection in mged reports local units - Sean Morrison
 * improved photon map irradiance progress reporting - Erik Greenwald
 * tab-completion for mged - John Anderson
